--- a/content/css/app.css
+++ b/content/css/app.css
@@ -1,12 +1,17 @@
 body {
   height: 100%;
   width: 100%;
-  overflow-y: hidden;
+}
+
+video {
+  position: relative;
+  top: 0;
+  height: 500px;
 }
 
 .movie-list {
-  max-height: 100em;
-  overflow-y: auto;
+  position: relative;
+  top: 0;
 }
 
 .movie-list .movie {
