--- a/content/css/app.css
+++ b/content/css/app.css
@@ -1,7 +1,37 @@
 body {
   height: 100%;
   width: 100%;
-  background: radial-gradient(#898989,#121212);
+  background: #000;
+}
+
+.movie {
+  margin: 20px;
+}
+
+.movie:hover {
+  cursor: pointer;
+}
+
+.movie h4 {
+  color: white;
+}
+
+.movie .info {
+  background-color: #FFFFFF;
+}
+
+.search {
+  border-color: grey;
+  background-color: black;
+  border-radius: 4px;
+  height: 40px;
+  width: 200px;
+  font-size: 20px;
+  padding: 15px 0 15px 5px;
+  color: grey;
+  background: url(../image/search-icon.png) 99% no-repeat;
+  background-size: 20px 20px;
+  background-position: right 10px top 8px;
 }
 
 video {
