--- a/content/css/app.css
+++ b/content/css/app.css
@@ -36,13 +36,20 @@ body {
 
 video {
   position: relative;
-  top: 0;
-  height: 500px;
+  margin: 0 auto;
+  width: 1000px;
+  display: block;
+  top: 200px;
 }
 
 .btn-back {
-  font-family: fantasy;
-  font-size: 24px;
+  color: white;
+  font-size: 80px;
+  text-decoration: none;
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 30px 30px 0 0;
 }
 
 .movie-list {
