--- a/content/css/app.css
+++ b/content/css/app.css
@@ -6,6 +6,7 @@ body {
 
 .movie {
   margin: 20px;
+  height: auto;
 }
 
 .movie:hover {
@@ -24,14 +25,37 @@ body {
   border-color: grey;
   background-color: black;
   border-radius: 4px;
+  border-style: double;
   height: 40px;
-  width: 200px;
-  font-size: 20px;
-  padding: 15px 0 15px 5px;
+  width: 275px;
+  font-size: 14px;
+  padding: 15px 0 15px 15px;
   color: grey;
   background: url(../image/search-icon.png) 99% no-repeat;
   background-size: 20px 20px;
   background-position: right 10px top 8px;
+  margin: 30px 0 0 50px;
+}
+
+.search-nav {
+  position: relative;
+  bottom: 0;
+  margin: 40px 40px 40px 50px;
+}
+
+.search-nav button {
+  font-size: 30px;
+  padding: 5px;
+  width: 100px;
+  font-weight: bold;
+  border-radius: 4px;
+  border-style: none;
+  background-color: ivory;
+  color: #585858;
+}
+
+.search-nav button.right {
+  float: right;
 }
 
 video {
@@ -54,6 +78,9 @@ video {
 
 .movie-list {
   top: 0;
+  margin: 30px;
+  height: auto;
+  overflow: hidden;
 }
 
 .movie-list .movie {
