--- a/content/css/app.css
+++ b/content/css/app.css
@@ -4,6 +4,14 @@ body {
   background: #000;
 }
 
+.navbar-collapse {
+  padding-right: 40px;
+}
+
+.navbar-brand {
+  cursor: pointer;
+}
+
 .movie {
   margin: 20px;
   height: auto;
@@ -98,8 +106,11 @@ video {
   font-size: 40px;
   text-decoration: none;
   top: 0;
-  margin: 30px 30px 0 0;
   float:right;
+}
+
+.btn-back:hover {
+  text-decoration: none;
 }
 
 .movie-list {
